<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Header-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_header_app"
            style="@style/HeaderStyle"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_introduction_app"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"/>
        <!--Questions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--First Question-->
            <TextView
                style="@style/QuestionTheme"
                android:text="@string/first_question_text"/>
            <!--Answers-->
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/firstRadioButtonA"
                    style="@style/AnswerTheme"
                    android:text="@string/option1_firstQ"/>
                <RadioButton
                    android:id="@+id/firstRadioButtonB"
                    style="@style/AnswerTheme"
                    android:text="@string/option2_firstQ"/>
                <RadioButton
                    android:id="@+id/firstRadioButtonC"
                    style="@style/AnswerTheme"
                    android:text="@string/option3_firstQ"/>
                <RadioButton
                    android:id="@+id/firstRadioButtonD"
                    style="@style/AnswerTheme"
                    android:text="@string/option4_firstQ"/>

            </RadioGroup>
            <!--Second Question-->
            <TextView
                style="@style/QuestionTheme"
                android:text="@string/second_question_text"/>
            <CheckBox
                android:id="@+id/secondCheckboxA"
                style="@style/AnswerTheme"
                android:text="@string/option1_secondQ"/>
            <CheckBox
                android:id="@+id/secondCheckboxB"
                style="@style/AnswerTheme"
                android:text="@string/option2_secondQ"/>
            <CheckBox
                android:id="@+id/secondCheckboxC"
                style="@style/AnswerTheme"
                android:text="@string/option3_secondQ"/>
            <CheckBox
                android:id="@+id/secondCheckboxD"
                style="@style/AnswerTheme"
                android:text="@string/option4_secondQ"/>
            <!--Third Question-->
            <TextView
                style="@style/QuestionTheme"
                android:text="@string/third_question_text"/>
            <EditText
                android:id="@+id/thirdEditText"
                style="@style/QuestionTheme"
                android:hint="@string/third_qestion_hint"/>
            <!--Fourt Question-->
            <TextView
                style="@style/QuestionTheme"
                android:text="@string/fourth_question_text"/>
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/fourthRadioButtonA"
                    style="@style/AnswerTheme"
                    android:text="@string/option1_fourthQ"/>
                <RadioButton
                    android:id="@+id/fourthRadioButtonB"
                    style="@style/AnswerTheme"
                    android:text="@string/option2_fourthQ"/>
                <RadioButton
                    android:id="@+id/fourthRadioButtonC"
                    style="@style/AnswerTheme"
                    android:text="@string/option3_fourthQ"/>
                <RadioButton
                    android:id="@+id/fourthRadioButtonD"
                    style="@style/AnswerTheme"
                    android:text="@string/option4_fourthQ"/>
            </RadioGroup>
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:text="Submit"
                android:onClick="displayScore"/>

        </LinearLayout>
</LinearLayout>
</ScrollView>